# recipe-search

./: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  README.md  pyproject.toml  railway.json
evals/: eval-20260703-154701.json  eval-20260703-154701.md  eval-20260703-154947.json  eval-20260703-154947.md  eval-20260703-173859.json  eval-20260703-173859.md  eval-20260703-174207.json  eval-20260703-174207.md  eval-20260703-174429.json  eval-20260703-174429.md  eval-20260703-174702.json  eval-20260703-174702.md  eval-20260708-225723.json  eval-20260708-225723.md  eval-20260709-201730.json  eval-20260709-201730.md  eval-20260709-203223.json  eval-20260709-203223.md  eval-20260709-234416.json  eval-20260709-234416.md  eval-20260710-160908.json  eval-20260710-160908.md  eval-20260710-161541.json  eval-20260710-161541.md  eval-20260710-161701.json  eval-20260710-161701.md
scripts/: eval_recipes.py
src/recipe_search/: __init__.py  config.py  evaluation.py  exa_search.py  limits.py  main.py  pipeline.py  usage.py
src/recipe_search/static/: index.html
tests/: test_api.py  test_evaluation.py  test_exa_search.py  test_limits.py  test_pipeline.py  test_usage.py
